fix links replacing tab and text wrap on movie dialog

--- a/src/app/pages/movies/movies.component.css
+++ b/src/app/pages/movies/movies.component.css
@@ -38,6 +38,7 @@
 	gap: 1rem;
 	margin-top: 1rem;
 	font-size: 1.25rem;
+	white-space: nowrap;
 }
 
 /* Movie Grid Styling */
